native/crates/specular-scene/tests/snapshots/panels__sidebar_rename.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,44 256x376 fill=#f2f2f2
screen rect 255,44 1x376 fill=#cac6c3
screen text "Canvases" 12,44 box-h=36 12/16 w500 #303030 middle
screen path M101,60.5 L104,63.5 L107,60.5 stroke=#303030/1
screen path M225.92,62 L234.08,62 M230,57.92 L230,66.08 stroke=#30303094/1.17
screen path M25.5,101.83 C24.86,101.83 24.33,101.31 24.33,100.67 L24.33,91.33 C24.33,90.69 24.86,90.17 25.5,90.17 L30.17,90.17 C30.54,90.17 30.9,90.31 31.16,90.58 L33.25,92.67 C33.52,92.93 33.67,93.29 33.67,93.67 L33.67,100.67 C33.67,101.31 33.14,101.83 32.5,101.83 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M30.17,90.17 L30.17,93.08 C30.17,93.41 30.43,93.67 30.75,93.67 L33.67,93.67 stroke=#30303094/1.17 clip=0,80 255x340
screen text "Home" 44,82 box-h=28 12/16 #303030 middle clip=0,80 255x340
screen path M25.5,129.83 C24.86,129.83 24.33,129.31 24.33,128.67 L24.33,119.33 C24.33,118.69 24.86,118.17 25.5,118.17 L30.17,118.17 C30.54,118.17 30.9,118.31 31.16,118.58 L33.25,120.67 C33.52,120.93 33.67,121.29 33.67,121.67 L33.67,128.67 C33.67,129.31 33.14,129.83 32.5,129.83 Z stroke=#30303094/1.17 clip=0,80 255x340
screen path M30.17,118.17 L30.17,121.08 C30.17,121.41 30.43,121.67 30.75,121.67 L33.67,121.67 stroke=#30303094/1.17 clip=0,80 255x340
screen path M236.67,120.5 L230.25,126.92 L227.33,124 stroke=#303030/1.17 clip=0,80 255x340
screen rect 41,113 177x22 r=4 fill=#ffffff stroke=#d4d4d8/1/inside clip=0,80 255x340
screen text "Roadmap" 44,116 box-h=16 12/16 #303030 middle clip=44,116 171x16
screen rect 114,114 1x16 fill=#303030 clip=44,116 171x16
screen rect 0,146 255x1 fill=#e7e5e4 clip=0,80 255x340
screen text "Notes" 12,155 box-h=36 12/16 w500 #303030 middle clip=0,80 255x340
screen path M71,171.5 L74,174.5 L77,171.5 stroke=#303030/1 clip=0,80 255x340
screen text "Pages" 12,191 box-h=36 12/16 w500 #303030 middle clip=0,80 255x340
screen path M71,207.5 L74,210.5 L77,207.5 stroke=#303030/1 clip=0,80 255x340
screen text "No items" 22,231 box-h=14 12/16 #30303094 middle clip=0,80 255x340
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen rect 390,8 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 398.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 398.81,14.82 15.2x15.19 fill=#45403c
screen rect 430,14 1x16 fill=#18181b33
screen path M457.44,17.51 C457.48,17.63 457.5,17.75 457.5,17.88 C457.5,18.5 457,19 456.38,19 L454.62,19 C454,19 453.5,18.5 453.5,17.88 C453.5,17.75 453.52,17.63 453.56,17.51 L454.98,13.47 C455.16,12.98 455.84,12.98 456.02,13.47 L457.44,17.51 Z fill=#cd0000 clip=445,12 20x20
screen path M458,17.88 C458,18.77 457.27,19.5 456.38,19.5 L454.62,19.5 C453.73,19.5 453,18.77 453,17.88 C453,17.7 453.03,17.51 453.09,17.34 L454.51,13.3 C454.84,12.37 456.16,12.37 456.49,13.3 L457.91,17.34 C457.97,17.51 458,17.7 458,17.88 Z stroke=#18181b/1 clip=445,12 20x20
screen path 14 commands in 449,17.99 13x50.01 fill=#f4f4f4 clip=445,12 20x20
screen path 14 commands in 449.5,18.49 12x49.01 stroke=#18181b/1 clip=445,12 20x20
screen path M458.1,20.37 L461,27 C459.57,25.9 457.49,26.45 456.79,28.11 L456,30 L456,19 C456.91,19 457.74,19.54 458.1,20.37 Z fill=#dbdbdb6e clip=445,12 20x20
screen path M455,19 L456,19 L456,19 L456,31 L456,31 L455,31 L455,31 L455,19 L455,19 Z fill=#b5b5b5aa clip=445,12 20x20
screen path M488.4,15.77 L497.38,16.24 C499.04,16.33 500.32,17.74 500.26,19.4 L499.88,28.39 C499.81,30.04 498.41,31.32 496.76,31.23 L487.77,30.76 C486.12,30.67 484.83,29.26 484.9,27.6 L485.28,18.61 C485.35,16.96 486.74,15.68 488.4,15.77 Z fill=#ffeab0
screen path M488.38,16.27 L497.36,16.74 C498.74,16.81 499.81,17.99 499.76,19.37 L499.38,28.36 C499.32,29.74 498.16,30.8 496.78,30.73 L487.79,30.26 C486.41,30.19 485.34,29.01 485.4,27.63 L485.78,18.64 C485.83,17.26 487,16.2 488.38,16.27 Z stroke=#45403c/1
screen path M482,15 L482,26 C482,27.1 482.9,28 484,28 L495,28 C496.11,28 497,27.1 497,26 L497,22.88 C497,17 493,13 489.4,13 L484,13 C482.9,13 482,13.9 482,15 Z fill=#ffeab0
screen path M484,13.5 L489.4,13.5 C492.64,13.5 496.5,17.19 496.5,22.88 L496.5,26 C496.5,26.83 495.83,27.5 495,27.5 L484,27.5 C483.17,27.5 482.5,26.83 482.5,26 L482.5,15 C482.5,14.17 483.17,13.5 484,13.5 Z stroke=#45403c/1
screen path M489.4,13.5 C489.52,13.5 489.66,13.54 489.84,13.61 C491.9,14.45 491.86,17.23 490.82,19.21 C490.73,19.38 490.87,19.58 491.06,19.55 L491.69,19.45 C493.45,19.17 495.38,19.71 496.07,21.35 C496.39,22.12 496.5,22.74 496.5,23 stroke=#45403c/1
screen path M519,13.5 L526,13.5 C526.83,13.5 527.5,14.17 527.5,15 L527.5,22 C527.5,22.83 526.83,23.5 526,23.5 L519,23.5 C518.17,23.5 517.5,22.83 517.5,22 L517.5,15 C517.5,14.17 518.17,13.5 519,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M528,20.5 L528,20.5 C530.49,20.5 532.5,22.51 532.5,25 L532.5,25 C532.5,27.49 530.49,29.5 528,29.5 L528,29.5 C525.51,29.5 523.5,27.49 523.5,25 L523.5,25 C523.5,22.51 525.51,20.5 528,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 529.5,13.5 7.21x7.21 fill=#45403c
screen path M555.5,13 L567.5,13 C568.6,13 569.5,13.9 569.5,15 L569.5,23 C569.5,24.1 568.6,25 567.5,25 L555.5,25 C554.4,25 553.5,24.1 553.5,23 L553.5,15 C553.5,13.9 554.4,13 555.5,13 Z fill=#e8e8e8
screen path M553.5,18 L553.5,15 C553.5,13.9 554.4,13 555.5,13 L567.5,13 C568.6,13 569.5,13.9 569.5,15 L569.5,18 Z fill=#edebe3
screen path M553.5,18 L569.5,18 stroke=#45403c/1
screen path M556.5,14.5 L556.5,14.5 C557.05,14.5 557.5,14.95 557.5,15.5 L557.5,15.5 C557.5,16.05 557.05,16.5 556.5,16.5 L556.5,16.5 C555.95,16.5 555.5,16.05 555.5,15.5 L555.5,15.5 C555.5,14.95 555.95,14.5 556.5,14.5 Z fill=#45403c
screen path M559.5,14.5 L559.5,14.5 C560.05,14.5 560.5,14.95 560.5,15.5 L560.5,15.5 C560.5,16.05 560.05,16.5 559.5,16.5 L559.5,16.5 C558.95,16.5 558.5,16.05 558.5,15.5 L558.5,15.5 C558.5,14.95 558.95,14.5 559.5,14.5 Z fill=#45403c
screen path M562.5,14.5 L562.5,14.5 C563.05,14.5 563.5,14.95 563.5,15.5 L563.5,15.5 C563.5,16.05 563.05,16.5 562.5,16.5 L562.5,16.5 C561.95,16.5 561.5,16.05 561.5,15.5 L561.5,15.5 C561.5,14.95 561.95,14.5 562.5,14.5 Z fill=#45403c
screen path M555.5,13 L567.5,13 C568.6,13 569.5,13.9 569.5,15 L569.5,23 C569.5,24.1 568.6,25 567.5,25 L555.5,25 C554.4,25 553.5,24.1 553.5,23 L553.5,15 C553.5,13.9 554.4,13 555.5,13 Z stroke=#45403c/1
screen path M566.37,15.6 L570.57,16.73 C571.81,17.06 572.55,18.34 572.21,19.58 L569.79,28.61 C569.46,29.85 568.19,30.58 566.95,30.25 L562.75,29.13 C561.51,28.79 560.77,27.52 561.1,26.28 L563.52,17.25 C563.85,16.01 565.13,15.27 566.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M563.56,26.75 L567.43,27.79 stroke=#45403c/1
screen path 56 commands in 592,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 628.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 629.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 659,14 1x16 fill=#18181b33
screen path 25 commands in 675.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 677.33,15.33 16.11x16.11 fill=#45403c
screen path 79 commands in 711.21,13.23 17.56x17.56 fill=#9b9b9b
screen path 28 commands in 719.01,13.51 9.48x9.48 fill=#dedede stroke=#45403c/1.11
screen path 17 commands in 711.06,19.48 11.46x11.46 fill=#e8e8e8 stroke=#45403c/1.11
screen rect 744,14 1x16 fill=#18181b33
screen text "100%" 762,8 box-h=28 12/16 #52525c middle
screen path M798.5,20.75 L801,23.25 L803.5,20.75 stroke=#45403c66/0.83
screen path M24.92,16.75 L33.08,16.75 C33.73,16.75 34.25,17.27 34.25,17.92 L34.25,26.08 C34.25,26.73 33.73,27.25 33.08,27.25 L24.92,27.25 C24.27,27.25 23.75,26.73 23.75,26.08 L23.75,17.92 C23.75,17.27 24.27,16.75 24.92,16.75 Z stroke=#52525c/1.17
screen path M27.25,16.75 L27.25,27.25 stroke=#52525c/1.17
