native/crates/specular-scene/tests/snapshots/panels__sticky_dock.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,0 1200x38 fill=#d6d3d1
screen rect 86,5 180x28 r=6 fill=#fdf8f5
screen path M96.5,24.83 C95.86,24.83 95.33,24.31 95.33,23.67 L95.33,14.33 C95.33,13.69 95.86,13.17 96.5,13.17 L101.17,13.17 C101.54,13.17 101.9,13.31 102.16,13.58 L104.25,15.67 C104.52,15.93 104.67,16.29 104.67,16.67 L104.67,23.67 C104.67,24.31 104.14,24.83 103.5,24.83 Z stroke=#18181b/1.17
screen path M101.17,13.17 L101.17,16.08 C101.17,16.41 101.43,16.67 101.75,16.67 L104.67,16.67 stroke=#18181b/1.17
screen text "Canvas" 111,5 box-h=28 12/16 #18181b middle
screen path M279.92,19 L288.08,19 M284,14.92 L284,23.08 stroke=#52525c/1.17
screen rect 0,38 1200x40 fill=#d6d3d1
screen rect 372,44 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 380.81,50.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 380.81,50.82 15.2x15.19 fill=#45403c
screen rect 412,50 1x16 fill=#18181b33
screen path M439.44,53.51 C439.48,53.63 439.5,53.75 439.5,53.88 C439.5,54.5 439,55 438.38,55 L436.62,55 C436,55 435.5,54.5 435.5,53.88 C435.5,53.75 435.52,53.63 435.56,53.51 L436.98,49.47 C437.16,48.98 437.84,48.98 438.02,49.47 L439.44,53.51 Z fill=#cd0000 clip=427,48 20x20
screen path M440,53.88 C440,54.77 439.27,55.5 438.38,55.5 L436.62,55.5 C435.73,55.5 435,54.77 435,53.88 C435,53.7 435.03,53.51 435.09,53.34 L436.51,49.3 C436.84,48.37 438.16,48.37 438.49,49.3 L439.91,53.34 C439.97,53.51 440,53.7 440,53.88 Z stroke=#18181b/1 clip=427,48 20x20
screen path 14 commands in 431,53.99 13x50.01 fill=#f4f4f4 clip=427,48 20x20
screen path 14 commands in 431.5,54.49 12x49.01 stroke=#18181b/1 clip=427,48 20x20
screen path M440.1,56.37 L443,63 C441.57,61.9 439.49,62.45 438.79,64.11 L438,66 L438,55 C438.91,55 439.74,55.54 440.1,56.37 Z fill=#dbdbdb6e clip=427,48 20x20
screen path M437,55 L438,55 L438,55 L438,67 L438,67 L437,67 L437,67 L437,55 L437,55 Z fill=#b5b5b5aa clip=427,48 20x20
screen path M470.4,51.77 L479.38,52.24 C481.04,52.33 482.32,53.74 482.26,55.4 L481.88,64.39 C481.81,66.04 480.41,67.32 478.76,67.23 L469.77,66.76 C468.12,66.67 466.83,65.26 466.9,63.6 L467.28,54.61 C467.35,52.96 468.74,51.68 470.4,51.77 Z fill=#ffeab0
screen path M470.38,52.27 L479.36,52.74 C480.74,52.81 481.81,53.99 481.76,55.37 L481.38,64.36 C481.32,65.74 480.16,66.8 478.78,66.73 L469.79,66.26 C468.41,66.19 467.34,65.01 467.4,63.63 L467.78,54.64 C467.83,53.26 469,52.2 470.38,52.27 Z stroke=#45403c/1
screen path M464,51 L464,62 C464,63.1 464.9,64 466,64 L477,64 C478.11,64 479,63.1 479,62 L479,58.88 C479,53 475,49 471.4,49 L466,49 C464.9,49 464,49.9 464,51 Z fill=#ffeab0
screen path M466,49.5 L471.4,49.5 C474.64,49.5 478.5,53.19 478.5,58.88 L478.5,62 C478.5,62.83 477.83,63.5 477,63.5 L466,63.5 C465.17,63.5 464.5,62.83 464.5,62 L464.5,51 C464.5,50.17 465.17,49.5 466,49.5 Z stroke=#45403c/1
screen path M471.4,49.5 C471.52,49.5 471.66,49.54 471.84,49.61 C473.9,50.45 473.86,53.23 472.82,55.21 C472.73,55.38 472.87,55.58 473.06,55.55 L473.69,55.45 C475.45,55.17 477.38,55.71 478.07,57.35 C478.39,58.12 478.5,58.74 478.5,59 stroke=#45403c/1
screen path M501,49.5 L508,49.5 C508.83,49.5 509.5,50.17 509.5,51 L509.5,58 C509.5,58.83 508.83,59.5 508,59.5 L501,59.5 C500.17,59.5 499.5,58.83 499.5,58 L499.5,51 C499.5,50.17 500.17,49.5 501,49.5 Z fill=#efcbcd stroke=#45403c/1
screen path M510,56.5 L510,56.5 C512.49,56.5 514.5,58.51 514.5,61 L514.5,61 C514.5,63.49 512.49,65.5 510,65.5 L510,65.5 C507.51,65.5 505.5,63.49 505.5,61 L505.5,61 C505.5,58.51 507.51,56.5 510,56.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 511.5,49.5 7.21x7.21 fill=#45403c
screen path M537.5,49 L549.5,49 C550.6,49 551.5,49.9 551.5,51 L551.5,59 C551.5,60.1 550.6,61 549.5,61 L537.5,61 C536.4,61 535.5,60.1 535.5,59 L535.5,51 C535.5,49.9 536.4,49 537.5,49 Z fill=#e8e8e8
screen path M535.5,54 L535.5,51 C535.5,49.9 536.4,49 537.5,49 L549.5,49 C550.6,49 551.5,49.9 551.5,51 L551.5,54 Z fill=#edebe3
screen path M535.5,54 L551.5,54 stroke=#45403c/1
screen path M538.5,50.5 L538.5,50.5 C539.05,50.5 539.5,50.95 539.5,51.5 L539.5,51.5 C539.5,52.05 539.05,52.5 538.5,52.5 L538.5,52.5 C537.95,52.5 537.5,52.05 537.5,51.5 L537.5,51.5 C537.5,50.95 537.95,50.5 538.5,50.5 Z fill=#45403c
screen path M541.5,50.5 L541.5,50.5 C542.05,50.5 542.5,50.95 542.5,51.5 L542.5,51.5 C542.5,52.05 542.05,52.5 541.5,52.5 L541.5,52.5 C540.95,52.5 540.5,52.05 540.5,51.5 L540.5,51.5 C540.5,50.95 540.95,50.5 541.5,50.5 Z fill=#45403c
screen path M544.5,50.5 L544.5,50.5 C545.05,50.5 545.5,50.95 545.5,51.5 L545.5,51.5 C545.5,52.05 545.05,52.5 544.5,52.5 L544.5,52.5 C543.95,52.5 543.5,52.05 543.5,51.5 L543.5,51.5 C543.5,50.95 543.95,50.5 544.5,50.5 Z fill=#45403c
screen path M537.5,49 L549.5,49 C550.6,49 551.5,49.9 551.5,51 L551.5,59 C551.5,60.1 550.6,61 549.5,61 L537.5,61 C536.4,61 535.5,60.1 535.5,59 L535.5,51 C535.5,49.9 536.4,49 537.5,49 Z stroke=#45403c/1
screen path M548.37,51.6 L552.57,52.73 C553.81,53.06 554.55,54.34 554.21,55.58 L551.79,64.61 C551.46,65.85 550.19,66.58 548.95,66.25 L544.75,65.13 C543.51,64.79 542.77,63.52 543.1,62.28 L545.52,53.25 C545.85,52.01 547.13,51.27 548.37,51.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M545.56,62.75 L549.43,63.79 stroke=#45403c/1
screen path 56 commands in 574,50.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 610.44,49.94 13.13x16.13 fill=#45403c
screen path 50 commands in 611.56,51.06 10.87x13.88 fill=#e8e8e8
screen rect 641,50 1x16 fill=#18181b33
screen path 25 commands in 657.56,49.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 659.33,51.33 16.11x16.11 fill=#45403c
screen path 79 commands in 693.21,49.23 17.56x17.56 fill=#9b9b9b
screen path 28 commands in 701.01,49.51 9.48x9.48 fill=#dedede stroke=#45403c/1.11
screen path 17 commands in 693.06,55.48 11.46x11.46 fill=#e8e8e8 stroke=#45403c/1.11
screen rect 726,50 1x16 fill=#18181b33
screen path 76 commands in 742.17,49.17 17.67x17.67 fill=#45403c
screen path M751,54.5 L751,54.5 C752.93,54.5 754.5,56.07 754.5,58 L754.5,58 C754.5,59.93 752.93,61.5 751,61.5 L751,61.5 C749.07,61.5 747.5,59.93 747.5,58 L747.5,58 C747.5,56.07 749.07,54.5 751,54.5 Z fill=#e8e8e8 stroke=#45403c/1
screen text "100%" 780,44 box-h=28 12/16 #52525c middle
screen path M816.5,56.75 L819,59.25 L821.5,56.75 stroke=#45403c66/0.83
screen rect 0,78 1200x40 fill=#d6d3d1
screen rect 0,117 1200x1 fill=#a6a09b
screen text "Small" 18,86 box-h=24 12/16 #30303094 middle
screen path M75,96.5 L78,99.5 L81,96.5 stroke=#30303094/1
screen text "Sans" 100,86 box-h=24 12/16 #30303094 middle
screen path M147,96.5 L150,99.5 L153,96.5 stroke=#30303094/1
screen rect 170,90 1x16 fill=#18181b33
screen ellipse 183,90 16x16 fill=#fafaf9 stroke=#cac6c3/1/inside
screen path M206,96.5 L209,99.5 L212,96.5 stroke=#30303094/1
screen rect 229,90 1x16 fill=#18181b33
screen path M247.61,102.67 C249.91,103.85 252.73,103.18 254.25,101.09 C255.77,99 255.54,96.11 253.72,94.28 C251.89,92.46 249,92.23 246.91,93.75 C244.82,95.27 244.15,98.09 245.33,100.39 L244.17,103.83 Z stroke=#30303094/1.17
